Running without insecure dashboard

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,17 +5,20 @@ services:
     image: traefik:latest
     container_name: traefik
     restart: unless-stopped
-    command: [
-      --api.insecure=true,
-      --providers.docker
-    ]
+    command:
+      - --api.dashboard=true
+      - --api.debug=true
+      - --providers.docker
+      - --entrypoints.web.address=:80
     networks:
       - proxy
     ports:
       - 80:80
-      - 8080:8080
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+    labels:
+      - "traefik.http.routers.dashboard.rule=Host(`dashboard.docker.localhost`)"
+      - "traefik.http.routers.dashboard.service=api@internal"
 
   howto:
     image: docker/getting-started
